bin/testsuite/tests/compiler/src/errors/compiler4074.swg
#global testerror "Err0226"
struct A { B: s32 }

func toto()
{
    A
}
